--- a/inst/md_templates/test.Rmd
+++ b/inst/md_templates/test.Rmd
@@ -1,19 +1,20 @@
-
-
 ---
-title: "Analysisplan report"
+  title: "Analysisplan report"
 author: "IMPACT Initiatives"
 date: "`r Sys.Date()`"
 output:
   html_document:
-    toc: true
+  toc: true
+toc_depth: 5
+toc_float: true
 ---
 
 
-```{r setup, include=FALSE}
+  ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(htmltools)
 library(hypegrammaR)
+library(kableExtra)
 
 ```
 
@@ -23,46 +24,52 @@ resultlist <- readRDS(file = "../../../../deployment_resources/by_country/IRQ/MC
 questionnaire <- readRDS(file = "../../../../deployment_resources/by_country/IRQ/MCNA_Analysys_Iraq/output/questionnaire.RDS")
 
 source("../../../../deployment_resources/by_country/IRQ/MCNA_Analysys_Iraq/functions/results_handling.R")
-resultlist<-results_subset(resultlist,logical = runif(length(resultlist$results))<0.004)
+keep<-rep(FALSE,length(resultlist$results))
+keep[1:250]<-TRUE
+resultlist<-results_subset(resultlist,logical = keep)
+source("../../R/map_to_table.R")
+source("../../R/template_result_utils.R")
 ```
 
 ```{r,include=T,warning=F,error=F,message=F,echo=FALSE,results='asis'}
 
 analysisplan<-resultlist$analysisplan
+resultlist$analysisplan$repeat.var[analysisplan$repeat.var %in% c("", " ",NA,"NA")] <- NA
+resultlist$analysisplan$repeat.var.value[analysisplan$repeat.var.value %in% c("", " ",NA,"NA")] <- NA
 # knitr::kable(analysisplan,format = "html")
-results<-resultlist$results
+
 if(!is.null(questionnaire)){
-  results<- results %>% lapply(function(x){map_to_labeled(result = x, questionnaire = questionnaire)})
+  resultlist$results<- resultlist$results %>% lapply(function(x){map_to_labeled(result = x, questionnaire = questionnaire)})
 }
-for(rq in unique(analysisplan$research.question)){
-  htmltools::h1(rq) %>% as.character %>% cat
-      cat("\n\n")
-
-  in_rq<-(analysisplan$research.question==rq)
-  for(srq in unique(analysisplan$sub.research.question)){
-    in_srq<-(analysisplan$sub.research.question==srq)
-    htmltools::h2(srq) %>% as.character %>% cat
-        cat("\n\n")
-
-    for(i in which(in_rq & in_srq)){
 
 
-    if(!is.null(results[[i]]$summary.statistic)){
-    table <- results[[i]]$summary.statistic %>% (hypegrammaR:::rmdrs_pretty_summary_table)
-    cat(knitr::kable(table, format = "html"))
-    cat("\n\n")
-    
-    }
-    if(!is.null(results[[i]]$hypothesis.test$result$p.value)){
-    c(as.character(unique(results[[i]]$hypothesis.test$name)), "P Value:") %>% cat
-    results[[i]]$hypothesis.test$result$p.value %>% print}
-    knitr::kable(resultlist$results[[i]]$hypothesis.test %>% as.data.frame,format="html")
-        cat("\n\n")
 
-    }
-  }
-}
+
+
+
+md_out <- resultlist_recursive_markdown(resultlist,
+                                        by_analysisplan_columns = c("dependent.var","independent.var","repeat.var","repeat.var.value"),
+                                        by_prefix = c("", "disaggregated by","for each",""),
+                                        level = 2,
+                                        rmd_result_tables)
+
+cat(md_out)
 
 ```
+
+
+```{r,results='asis',echo = FALSE}
+
+cat("<style>")
+cat(".section .tocify-subheader .tocify-item {
+margin-left:5px;
+padding-left:5px;
+background: rgba(0, 0, 0, 0.1);
+}")
+cat("</style>")
+
+```
+
+
 
 
