--- a/inst/md_templates/generic_hierarchical_analysisplan_template.Rmd
+++ b/inst/md_templates/generic_hierarchical_analysisplan_template.Rmd
@@ -25,12 +25,11 @@ library(kableExtra)
 # - by_analysisplan_columns
 # - by_prefix
 # - render_result_with
-source("../../../../deployment_resources/by_country/IRQ/MCNA_Analysys_Iraq/functions/results_handling.R")
-keep<-rep(FALSE,length(resultlist$results))
-keep[1:250]<-TRUE
-resultlist<-results_subset(resultlist,logical = keep)
-source("../../R/map_to_table.R")
-source("../../R/template_result_utils.R")
+
+# keep<-rep(FALSE,length(resultlist$results))
+# keep[1:250]<-TRUE
+# resultlist<-results_subset(resultlist,logical = keep)
+
 ```
 
 ```{r,include=T,warning=F,error=F,message=F,echo=FALSE,results='asis'}
@@ -68,7 +67,7 @@ margin-left:5px;
 padding-left:5px;
 background: rgba(0, 0, 0, 0.1); 
 }")
-cat(css_styles)
+
 cat("</style>")
 
 ```
