--- a/vignettes/quickstart_fr.Rmd
+++ b/vignettes/quickstart_fr.Rmd
@@ -4,7 +4,7 @@ author: "Sharon Orengo"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Quickstart}
+  %\VignetteIndexEntry{Quickstart Francais}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
