--- a/vignettes/the_grammar_of_hypothesis_fr.Rmd
+++ b/vignettes/the_grammar_of_hypothesis_fr.Rmd
@@ -4,7 +4,7 @@ author: "Barner M., Henzler E."
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Speaking with the Grammar of Hypothesis}
+  %\VignetteIndexEntry{Parler la grammaire des hypotheses}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
