--- a/vignettes/the_grammar_of_hypothesis_fr.Rmd
+++ b/vignettes/the_grammar_of_hypothesis_fr.Rmd
@@ -3,6 +3,7 @@ title: "Une grammaire des statistiques"
 author: "Barner M., Henzler E."
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
+vignette: >
   %\VignetteIndexEntry{Speaking with the Grammar of Hypothesis (FR)}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
@@ -11,7 +12,8 @@ output: rmarkdown::html_vignette
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = FALSE
 )
 ```
 
