Print with analysisplan
- Deals with french CSV formats
- Adds analysisplan questions to your outputs

--- a/inst/md_templates/generic_hierarchical_analysisplan_template.Rmd
+++ b/inst/md_templates/generic_hierarchical_analysisplan_template.Rmd
@@ -42,15 +42,11 @@ if(!is.null(questionnaire)){
 
 
 
-
-
-
 md_out <- resultlist_recursive_markdown(resultlist,
-                              by_analysisplan_columns = by_analysisplan_columns,
+                              by_analysisplan_columns = names(analysisplan),
                               by_prefix = by_prefix,
-                              level = level,
-                              render_result_with = render_result_with,
-                              label_varnames = label_varnames)
+                              questionnaire = questionnaire,
+                              label_varnames = TRUE)
 
 cat(md_out)
 
