--- a/inst/md_templates/templates_analysisplan_report_full.Rmd
+++ b/inst/md_templates/templates_analysisplan_report_full.Rmd
@@ -15,7 +15,7 @@ library(hypegrammaR)
 
 
 ```{r,include=T,warning=F,error=F,message=F,echo=FALSE,results='asis'}
-resultlist <- x
+# resultlist <- x
 analysisplan<-resultlist$analysisplan
 knitr::kable(analysisplan,format = "html")
 results<-resultlist$results
